kubernetes/apps/chengdu/vaultwarden/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vault.cd.zouzonghua.cn`) || Host(`vault.zouzonghua.cn`) || Host(`vault.cd.home.arpa`)
      services:
        - name: vaultwarden
          port: 80
  tls: {}
